tests/ui/parser/issues/issue-70583-block-is-empty-1.stderr
error: unexpected closing delimiter: `}`
  --> $DIR/issue-70583-block-is-empty-1.rs:20:1
   |
LL | fn struct_generic(x: Vec<i32>) {
   |                                - this delimiter might not be properly closed...
...
LL |     }
   |     - ...as it matches this but it has different indentation
LL | }
   | ^ unexpected closing delimiter

error: aborting due to 1 previous error

